# Open_H264_Codec

./: README.md
include/: frame.h  img.h
project/cmake/: CMakeLists.txt
project/scripts/: build.sh  clean.sh  gen_raw_frames.py  run.sh
source/: frame.c  img.c
test/frame/: main.c
test/img/: main.c
